# mcp-calculator

./: README.md  pyproject.toml
src/mcp_server_calculator/: __init__.py  calculator.py
