[project]
name = "calculator-server"
version = "0.1.0"
description = "MCP Calculator Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
calculator-server = "mcp_server_calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_calculator"]
